--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "@types/googlemaps": "^3.39.12",
     "@types/jasmine": "^4.3.0",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^18.16.19",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.11.3",
     "codelyzer": "^6.0.0",
@@ -63,7 +62,8 @@
     "tslib": "^2.6.0",
     "tslint": "~6.1.0",
     "typescript": "^4.8.4",
-    "zone.js": "^0.13.1"
+    "zone.js": "^0.13.1",
+    "@types/node": "^22.15.29"
   },
   "engines": {
     "node": "16.15.0",
