--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/googlemaps": "^3.39.12",
     "@types/jasmine": "^4.3.0",
     "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^22.15.29",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.11.3",
     "codelyzer": "^6.0.0",
@@ -53,6 +54,7 @@
     "moment": "^2.30.1",
     "ngx-slick-carousel": "^15.0.0",
     "popper.js": "^1.15.0",
+    "process": "^0.11.10",
     "protractor": "~7.0.0",
     "rxjs": "^7.5.2",
     "rxjs-compat": "^6.5.4",
@@ -62,8 +64,7 @@
     "tslib": "^2.6.0",
     "tslint": "~6.1.0",
     "typescript": "^4.8.4",
-    "zone.js": "^0.13.1",
-    "@types/node": "^22.15.29"
+    "zone.js": "^0.13.1"
   },
   "engines": {
     "node": "16.15.0",
