--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-builders/custom-webpack": "^16.0.1",
     "@angular-devkit/build-angular": "^16.1.4",
     "@angular/animations": "^16.1.5",
     "@angular/cli": "^16.1.4",
@@ -33,6 +34,7 @@
     "@types/jasmine": "^4.3.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^22.15.29",
+    "dotenv-webpack": "^8.1.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.11.3",
     "codelyzer": "^6.0.0",
